--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
 </head>
 
 <body>
+  <dialog id="dialog">
+    <form method="dialog">
+      <p>
+        <label>
+          Favorite animal:
+          <input type="text" required />
+        </label>
+      </p>
+      <div>
+        <input type="submit" id="normal-close" value="Normal close" />
+        <input
+          type="submit"
+          id="novalidate-close"
+          value="Novalidate close"
+          formnovalidate />
+        <input type="submit" id="js-close" value="JS close" />
+      </div>
+    </form>
+  </dialog>
+  <p>
+    <button id="show-dialog">Show the dialog</button>
+  </p>
+  <output></output>
   <header class="p-4 mb-4 text-center border-bottom border-5">
     <h1 class="display-3">Task Board</h1>
     <p class="lead">A simple Kanban board for task management</p>
