--- a/index.html
+++ b/index.html
@@ -16,29 +16,7 @@
 </head>
 
 <body>
-  <dialog id="dialog">
-    <form method="dialog">
-      <p>
-        <label>
-          Favorite animal:
-          <input type="text" required />
-        </label>
-      </p>
-      <div>
-        <input type="submit" id="normal-close" value="Normal close" />
-        <input
-          type="submit"
-          id="novalidate-close"
-          value="Novalidate close"
-          formnovalidate />
-        <input type="submit" id="js-close" value="JS close" />
-      </div>
-    </form>
-  </dialog>
-  <p>
-    <button id="show-dialog">Show the dialog</button>
-  </p>
-  <output></output>
+ 
   <header class="p-4 mb-4 text-center border-bottom border-5">
     <h1 class="display-3">Task Board</h1>
     <p class="lead">A simple Kanban board for task management</p>
@@ -48,6 +26,40 @@
       <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add Task</button>
     </div>
     <!-- Todo: Create a modal with a form to add tasks -->
+    <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="formModalLabel">Add Task</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+<div class="modal-body">
+            <form id="taskForm" class="p-3">
+              <div class="row">
+                <div class="col-6">
+                  <label for="taskTitle" class="form-label">Task Title</label>
+                  <input autocomplete="off" type="text" class="form-control mb-3" id="taskTitle" />
+                </div>
+<div class="col-6">
+                  <label for="taskDueDate" class="form-label">Task Due Date</label>
+                  <input autocomplete="off" type="text" class="form-control mb-3" id="taskDueDate" />
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <label for="taskDescription" class="form-label">Task Description</label>
+                  <textarea class="form-control mb-5" id="taskDescription" rows="3"></textarea>
+                </div>
+</div>
+              <div class="text-center">
+                <button type="submit" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add
+                  Task</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="row swim-lanes text-center justify-content-between">
       <div class="col-12 col-lg-4 d-flex">
         <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
